fix overflow iphone 3.0

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ header {
     height: 100vh;
     width: 100%;
     font-family: "Montserrat", sans-serif;
+    overflow-x: hidden;
 }
 
 li, a {
@@ -239,6 +240,7 @@ nav {
     border-radius: 50px;
     cursor: pointer;
     transform: all 0.3s ease 0s;
+    white-space: nowrap;
 }
 
 .mask-btn:hover {
@@ -536,6 +538,10 @@ footer {
         overflow-x: hidden;
         position: relative;
         height: 100%;
+    }
+
+    header {
+        overflow-x: hidden;
     }
 
     #logo {
